# ecash-402-client

./: .gitignore  README.md  README_SERVICE.md  docker-compose.client.yaml  docker-compose.yaml
otrta/: Cargo.toml  Dockerfile.client  Dockerfile.wallet
otrta/gateway/: .env  Cargo.toml  README.md  docker-compose.yaml
otrta/gateway/.sqlx/: query-4156cd08ac1a56e9fac19c68bb2351ec4bd74a8dd3ef101b5e2ade0cee129db9.json  query-43e61ee676bb6ddadf38f5af284bc613bec044add059438311d038611357f615.json  query-6f9905b667fbf3548c36ba06aa72dc093d704a24c750b6e9478a2c5622c04bcf.json  query-7cd6931100dadb8a5d6073f76b8c686e4557735880dfaa0e2085bdce1ca7a83d.json  query-8f9c071b404c98df0354ba953bfb9569b075b9d7bff6cffa471c6f4ff5982f1f.json  query-a3165a3458eb37c50c5879d77f5d456052736157231db9296505964f83bef3d5.json  query-a3c6b6e2dd9a97c247f0576a2e010db4c1e28697776b18aad7e2163e08e8e61c.json  query-b4d92edba214c6a3a06c031477be586f933a91e34c72eceb07192534ba42319d.json  query-c37adff23c881d1095533797d7f4d5edcf956e65a2220e0b206136e08459f56e.json  query-cf3ba03460bfec7835aeaed935231848f28f9f9567c21a5e2fd711c0c3b3d852.json  query-df7cd467173154665bcee87fb5c6290d6970fe37b2a2346d831102293234a7e0.json  query-e1c8fcfef89435e995581697a4c5e7e835a98e73453dd7d32fac1048e19d0610.json  query-f39e7ba284c742e883215277433d9bd94c5a1bf048e10362b468b67eb1d66b4f.json
otrta/gateway/configuration/: base.yaml  production.yaml
otrta/gateway/migrations/: 20240630000008_create_server_config_table.down.sql  20240630000008_create_server_config_table.up.sql  20250510125311_change.down.sql  20250510125311_change.up.sql  20250511135907_transaction.down.sql  20250511135907_transaction.up.sql
otrta/gateway/src/: connection.rs  error.rs  forward.rs  handlers.rs  lib.rs  models.rs  wallet.rs
otrta/gateway/src/db/: README.md  credit.rs  helpers.rs  mod.rs  server_config.rs  transaction.rs
otrta/wallet/: Cargo.toml
otrta/wallet/src/: lib.rs  models.rs  wallet.rs
otrta/wallet/src/api/: base.rs  client.rs  mod.rs  models.rs
ui/: Dockerfile  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/app/_login/: page.tsx
ui/app/_register/: page.tsx
ui/app/models/: page.tsx
ui/app/settings/: page.tsx
ui/components/: ModelSelector.tsx  app-sidebar.tsx  chart-area-interactive.tsx  credits-monitor.tsx  data-table.tsx  ecash-redeem.tsx  nav-documents.tsx  nav-main.tsx  nav-user.tsx  section-cards.tsx  site-header.tsx  transactions-monitor.tsx  wallet-balance.tsx
(+27 files in other folders)
