[workspace]

resolver = "2"

members = [
    "wallet",
    "gateway",
]

[workspace.dependencies]
tokio = {version = "1.44", features=["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde-aux = "4.7"
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"

dotenv = "0.15"
config = "0.15"
