[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
serde-aux = {workspace=true}
axum = {workspace=true}
tower = {workspace=true}
tower-http = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
time = {workspace=true}
chrono = {workspace=true}
uuid = {workspace=true}
reqwest = {workspace=true}
futures-util = {workspace=true}
tokio-stream = {workspace=true}

# Database dependencies
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
pgvector = { version = "0.4", features = [ "postgres", "sqlx" ] }
async-trait = "0.1"
thiserror = "2.0"
futures = "0.3"

secrecy = {version = "0.10", features = ["serde"]}
config = {workspace=true}

anyhow = "1.0"

dotenv = {workspace=true}
bigdecimal = "0.4.8"

wallet={path="../wallet"}
cdk = "0.9"
