[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
axum = {workspace=true}
tower = {workspace=true}
tower-http = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
uuid = {workspace=true}
reqwest = {workspace=true}
futures-util = {workspace=true}
tokio-stream = {workspace=true}
chrono = {workspace=true}

dotenv={workspace=true}

cdk = "0.9"
rand = "0.9"
cdk-redb = "0.9"
tempfile = "3.19"
bip39 = "2.0"
sha2 = "0.10"
cashu = "0.9"
anyhow = "1.0"
